include_directories(../../src-gen-c/Test_Transition)

add_executable(TestTransitionMain main.c)
target_link_libraries(TestTransitionMain Test_TransitionStatemachine)

add_test(test_transition_with_AEvent1_value_gt5 TestTransitionMain "1")
add_test(test_transition_with_AEvent1_value_is0 TestTransitionMain "2")
add_test(test_transition_with_AEvent1_value_lt0 TestTransitionMain "3")
add_test(test_transition_with_no_event_and_i_eq_5 TestTransitionMain "4")
add_test(test_transition_event2_set_with_event1_unconditioned TestTransitionMain "5")
add_test(test_transition_event2_set_with_event1_value_set_before TestTransitionMain "6")
add_test(test_transition_with_Event3_j_lt_20 TestTransitionMain "7")
add_test(test_transition_with_Event3_j_eq_25 TestTransitionMain "8")
add_test(test_transition_with_Event3_j_gt_30 TestTransitionMain "9")
add_test(test_transition_with_Event4_j_gt_30 TestTransitionMain "10")
add_test(test_transition_with_Event4_j_lt_30 TestTransitionMain "11")
add_test(test_after_transition_at_100_ms TestTransitionMain "12")
add_test(test_after_transition_eventHandling_100ms TestTransitionMain "13")
add_test(test_after_transition_eventHandling_10s TestTransitionMain "14")
